# wk-finops-vibe-coding

./: .env.example  .gitignore  .session_meta.json  BITACORA.md  LICENSE  Makefile  README.md  email_draft.md  mcp_client_example.py  prompts.md  pyproject.toml
.claude/: README.md  settings.json
.claude/agents/: analyzer-agent.md  compliance-agent.md  remediator-agent.md  reviewer-agent.md
.claude/commands/: audit.md  deploy-mcp.md  ingest.md  remediate.md  scan.md  status.md
.claude/docs/: AGENTS.md  COMMANDS.md  CONFIG.md  HOOKS.md  SKILLS.md
.claude/hooks/: README.md  elapsed_time.sh  prompt_logger.sh  safety_gate.sh  status_line.sh
.claude/skills/compliance-auditor/: SKILL.md
.claude/skills/cost-analyzer/: SKILL.md
.claude/skills/finops-architect/: SKILL.md
.claude/skills/finops-architect/references/: detection-rules.md  remediation-patterns.md  risk-scoring.md
.claude/skills/remediation-planner/: SKILL.md
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: AGENTIC_SURFACE.md  ARCHITECTURE.md  MCP_INTEGRATION.md  PRESENTATION.md  demo_output.txt
samples/: README.md  aws_cur_sample.csv  azure_billing_sample.json  generate.py
src/finops/: __init__.py  cli.py  config.py
src/finops/agents/: __init__.py  analyzer.py  base.py  orchestrator.py  remediator.py
src/finops/api/: __init__.py  main.py  schemas.py  webhooks.py
src/finops/api/routes/: __init__.py  agents.py  alerts.py  analyze.py  health.py  remediate.py  report.py  upload.py
src/finops/dashboard/: __init__.py  app.py
src/finops/db/: __init__.py  models.py  session.py
src/finops/detection/: __init__.py  aws_rules.py  engine.py  rules.py  scoring.py
src/finops/ingestion/: __init__.py  aws_cur.py  azure_billing.py  router.py  utils.py
src/finops/mcp_server/: __init__.py  __main__.py  server.py
src/finops/remediation/: __init__.py  generator.py  safety.py  templates.py
src/finops/utils/: __init__.py  demo_runner.py
tests/: conftest.py  test_agents.py  test_api.py  test_detection.py  test_ingestion.py  test_mcp.py  test_remediation.py
