[project]
name = "wk-finops-vibe-coding"
version = "0.1.0"
description = "Cloud Cost Optimizer & Remediation Engine — Wolters Kluwer 2026 Vibe Coding Challenge"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Andres Munoz" }
]
license = { text = "MIT" }
keywords = ["finops", "aws", "azure", "cost-optimization", "vibe-coding", "mcp", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.20",
    # Data
    "sqlmodel>=0.0.22",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pandas>=2.2.0",
    # AI
    "anthropic>=0.39.0",
    "mcp>=1.0.0",
    # Dashboard
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
    # CLI / runtime
    "typer>=0.13.0",
    "rich>=13.9.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.1",
    "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-jinja2",
]

[project.scripts]
finops = "finops.cli:app"

[project.urls]
Repository = "https://github.com/andresKillem/wk-finops-vibe-coding"
Issues = "https://github.com/andresKillem/wk-finops-vibe-coding/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finops"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "C4", "SIM"]
ignore = ["E501"]  # long lines OK in templates

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
"src/finops/cli.py" = ["B008"]  # typer pattern

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: integration tests (may be slow)",
    "llm: tests that hit the Anthropic API (requires ANTHROPIC_API_KEY)",
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
